@@ -1,3 +1,7 @@
+2019-12-09  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/init.c: Do not register a .Call method for PMurHash
+
 2019-12-05  Will Landau  <will.landau@gmail.com>
 
 	* R/init.R (.onLoad): Cache nosharing state in base::serialize
@@ -21,7 +25,7 @@
         * DESCRIPTION (Version, Date): Release 0.6.23
 
 	* inst/tinytest/test_sha1.R: Uncomment several tests which failed
-	under r-devel on Linux at CRAN 
+	under r-devel on Linux at CRAN
 
 2019-11-13  Dirk Eddelbuettel  <edd@debian.org>
 
